tests/samples/negative/control_flow/range_value_step_type_mismatch.ax
module range_value_step_type_mismatch;

fn main() -> i32 {
    let start: i32 = 0;
    let end: i32 = 3;
    let step: i64 = 1;
    let values = range(start, end, step);
    for value in values {
        return value;
    }
    return 0;
}
